# merkaartor

./: .drone.sec  .drone.yml  .gitattributes  .gitignore  .indent.pro  .travis.yml  AUTHORS  AboutDialog.ui  All.pro  CHANGELOG  CMakeLists.txt  COMPILE.md  CREDITS  Config.pri  DirtyDock.cpp  DirtyDock.h  DirtyDock.ui  DownloadMapDialog.ui  ExportDialog.ui  GeoImage.pri  GeoImageDock.cpp  GeoImageDock.h  GotoDialog.cpp  GotoDialog.h  GotoDialog.ui  HACKING  HACKING.md  INSTALL  IProgressWindow.h  ImportExport.pri  InfoDock.cpp  InfoDock.h  LICENSE  LICENSE.rtf  LayerDock.cpp  LayerDock.h  LayerWidget.cpp  LayerWidget.h  Main.cpp  MainWindow.cpp  (+33 more)
.devcontainer/: devcontainer.json
.tx/: config
Command/: Command.cpp  Command.h  DocumentCommands.cpp  DocumentCommands.h  FeatureCommands.cpp  FeatureCommands.h  RelationCommands.cpp  RelationCommands.h  RoadCommands.cpp  RoadCommands.h  TrackPointCommands.cpp  TrackPointCommands.h  TrackSegmentCommands.cpp  TrackSegmentCommands.h  WayCommands.cpp  WayCommands.h
Data/: rotterdam.osm  spangen.gpx
GPS/: GPS.pri  SatelliteStrengthView.cpp  SatelliteStrengthView.h  qgps.cpp  qgps.h  qgpsdevice.cpp  qgpsdevice.h  qgpsmainwindowui.ui  qgpssatellitetracker.cpp  qgpssatellitetracker.h
Icons/: AllIcons.qrc  Frisius.xpm  Frisius_large.xcf  Frisius_splash.xcf  Merkaartor.xpm  Merkaartor_large.xcf  Merkaartor_splash.xcf  add.xpm  edit-redo.xpm  edit-undo.xpm  empty.xpm  eye.xpm  frisius-win32.rc  merkaartor-win32.rc  merkaartor.icns  move.xpm  remove.xpm  reverse.xpm  small-remove.xpm  toolselect.xpm  zoomico.xpm
ImportExport/: ExportGPX.cpp  ExportGPX.h  IImportExport.cpp  IImportExport.h  ImportExportKML.cpp  ImportExportKML.h  ImportExportOsmBin.cpp  ImportExportOsmBin.h  ImportExportSHP.cpp  ImportNMEA.cpp  ImportNMEA.h
Interaction/: CreateAreaInteraction.cpp  CreateAreaInteraction.h  CreateDoubleWayInteraction.cpp  CreateDoubleWayInteraction.h  CreateNodeInteraction.cpp  CreateNodeInteraction.h  CreateRoundaboutDock.ui  CreateRoundaboutInteraction.cpp  CreateRoundaboutInteraction.h  CreateSingleWayInteraction.cpp  CreateSingleWayInteraction.h  CreateWayInteraction.cpp  CreateWayInteraction.h  EditInteraction.cpp  EditInteraction.h  EditRoadInteraction.cpp  EditRoadInteraction.h  Interaction.cpp  Interaction.h  MoveTrackPointInteraction.cpp  MoveTrackPointInteraction.h  ZoomInteraction.cpp  ZoomInteraction.h
Map/: Coord.cpp  Coord.h  DownloadOSM.cpp  DownloadOSM.h  ExportOSM.cpp  ExportOSM.h  FeatureManipulations.cpp  ImportGPX.cpp  ImportGPX.h  ImportNGT.cpp  ImportNGT.h  ImportOSM.cpp  ImportOSM.h  MapDocument.cpp  MapDocument.h  MapFeature.cpp  MapFeature.h  MapLayer.cpp  MapLayer.h  MapTypedef.h  Painting.cpp  Painting.h  PreDefinedTags.cpp  PreDefinedTags.h  Projection.cpp  Projection.h  Relation.cpp  Relation.h  Road.cpp  Road.h  RoadManipulations.cpp  RoadManipulations.h  TrackPoint.cpp  TrackPoint.h  TrackSegment.cpp  TrackSegment.h  Way.cpp  Way.h
NameFinder/: NameFinderResult.h  httpquery.cpp  httpquery.h  namefindertablemodel.cpp  namefinderwidget.cpp  namefinderwidget.h  namefinderwidget.ui
PaintStyle/: EditPaintStyle.cpp  EditPaintStyle.h  PaintStyle.cpp  PaintStyle.h  PaintStyleEditor.cpp  PaintStyleEditor.h  PaintStyleEditor.ui  TagSelector.cpp  TagSelector.h
Preferences/: MerkaartorPreferences.cpp  MerkaartorPreferences.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  ProjectionsList.cpp  ProjectionsList.h  TMSPreferencesDialog.cpp  TMSPreferencesDialog.h  TMSPreferencesDialog.ui  WMSPreferencesDialog.cpp  WMSPreferencesDialog.h  WMSPreferencesDialog.ui  WmsServersList.cpp  WmsServersList.h
QMapControl/: IImageManager.cpp  IImageManager.h  browserimagemanager.cpp  browserimagemanager.h  circlepoint.cpp  circlepoint.h  curve.cpp  curve.h  geometry.cpp  geometry.h  geometrylayer.cpp  geometrylayer.h  googledirectsatmapadapter.cpp  googlemapadapter.cpp  googlemapadapter.h  gps_position.cpp  gps_position.h  imagemanager.cpp  imagemanager.h  imagepoint.cpp  imagepoint.h  layer.cpp  layer.h  layermanager.cpp  layermanager.h  linestring.cpp  linestring.h  mainz_gps.nme  mapadapter.cpp  mapadapter.cpp~  mapadapter.h  mapcontrol.cpp  mapcontrol.h  maplayer.cpp  maplayer.h  mapnetwork.cpp  mapnetwork.h  osmmapadapter.cpp  osmmapadapter.h  point.cpp  (+9 more)
QtStyles/: QtStyles.pri
Render/: NativeRenderDialog.cpp  NativeRenderDialog.h  NativeRenderDialog.ui  OsmaRender.cpp  OsmaRender.h  OsmaRenderDialog.cpp  OsmaRenderDialog.h  OsmaRenderDialog.ui  Render.pri  osmarender.qrc
S60extensions/: README.txt
Styles/: Bicycle.mas  Classic.mas  Lighting.mas  Mapnik.mas  MapnikPlus.mas  Maxspeed.mas  Merkaartor.mas  Mobile.mas  None.mas  Styles.qrc  Validation.mas  Wireframe.mas
Sync/: DirtyList.cpp  DirtyList.h  SyncListDialog.ui  SyncOSM.cpp  SyncOSM.h
TagTemplate/: TagTemplate.cpp  TagTemplate.h
Templates/: Brussels.mat  TagTemplate.xsd  Templates.qrc  default.mat  mine.mat
Tools/: ActionsDialog.cpp  ActionsDialog.h  RegionMapWidget.cpp  RegionMapWidget.h  Tools.pri  WorldOsbManager.cpp  WorldOsbManager.h  WorldOsbManager.ui
Utils/: EditCompleterDelegate.cpp  EditCompleterDelegate.h  LineF.h  MDockAncestor.cpp  MDockAncestor.h  PictureViewerDialog.cpp  PictureViewerDialog.h  PixmapWidget.cpp  PixmapWidget.h  SelectionDialog.cpp  SelectionDialog.ui  ShortcutOverrideFilter.cpp  ShortcutOverrideFilter.h  SlippyMapWidget.cpp  SlippyMapWidget.h  SvgCache.cc  SvgCache.cpp  Utils.qrc
ci/: travis-linux-install.sh  travis-linux-script.sh  travis-osx-install.sh  travis-osx-script.sh  travis-windows-install.ps1  travis-windows-script.ps1  travis-windows-script.sh
cmake/: AppImageBuilder.yml.in  CMakeDMGBackground.tif  CMakeDMGSetup.scpt  build-metadata.cpp.in  deploy-osx.cmake  deploy-osx.cmake.in  deploy-windows.cmake  deploy-windows.cmake.in  deploy.json.in  upload-artifacts.sh.in  vcs-snapshot.cmake  vcs.cmake
debian/: changelog  control  copyright  menu  merkaartor.1  postinst  prerm  rules
include/: RTree.h
interfaces/: IBackend.h  IDocument.h  IFeature.h  IImageManager.cpp  IImageManager.h  (+8 more)
(+2250 files in other folders)
